--- a/_includes/post-meta-info.html
+++ b/_includes/post-meta-info.html
@@ -4,9 +4,10 @@
 <div class="tertiary-info post-meta-info">
     <date>
         {{ page.date | date: "%B %d, %Y"}}
-    </date> in 
+    </date> in
     {% for tag in page.tags %}
-        {{ tag }}
+        {% assign tagUrl = tag | replace: " ", "-" | replace "#", "-sharp" %}
+        <a href="{{ site.baseurl }}/blog/tag/{{tagUrl}}">{{ tag }}</a>
         {% if forloop.last == false %}
             ,
         {% endif %}
