--- a/_includes/post-meta-info.html
+++ b/_includes/post-meta-info.html
@@ -6,8 +6,7 @@
         {{ page.date | date: "%B %d, %Y"}}
     </date> in
     {% for tag in page.tags %}
-        {% assign tagUrl = tag | replace: " ", "-" | replace "#", "-sharp" %}
-        <a href="{{ site.baseurl }}/blog/tag/{{tagUrl}}">{{ tag }}</a>
+        <a href="{% include tag-url.html tag=tag %}">{{ tag }}</a>
         {% if forloop.last == false %}
             ,
         {% endif %}
