add meta-info on top of post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,8 @@ comments: true
         {{ page.title }}
     </h1>
 
+    {% include post-meta-info.html %}
+
     {% include post-series.html %}
 
     {{ content }}
