--- a/_sass/components/previous-next-post-links.scss
+++ b/_sass/components/previous-next-post-links.scss
@@ -1,7 +1,7 @@
 .previous-next-post-links {
     display: flex;
     flex-direction: row;
-    padding-bottom: 2rem;
+    padding: 2rem 0;
 
     font-size: $tertiary-info-font-size;
 
