--- a/css/main.scss
+++ b/css/main.scss
@@ -28,3 +28,4 @@
 @import "./components/youtube";
 @import "./components/about-me.scss";
 @import "./components/about-me-short.scss";
+@import "./components/tags-cloud.scss";
