--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -16,6 +16,10 @@
         display: block;
     }
 
+    .image--size-small {
+        max-width: 50%;
+    }
+
     // show the image with the original size on desktop, and 100% width on mobile
     @media screen and (min-width: $breakpoint-small) {
         .image--original-size-small {
