fix services paths

--- a/_includes/about-me-short.html
+++ b/_includes/about-me-short.html
@@ -6,8 +6,8 @@
     </p>
     <p>
         I can <a class="intanet-configuration-service-link"
-            href="{{site.baseUrl}}/services/intranet-configuration/">configure your SharePoint intranet</a> and do <a
-            class="custom-development-service-link" href="{{site.baseUrl}}/services/development/">custom Office&#8239;365
+            href="{{site.baseUrl}}/services/intranet-configuration">configure your SharePoint intranet</a> and do <a
+            class="custom-development-service-link" href="{{site.baseUrl}}/services/development">custom Office&#8239;365
             development</a>.
         <br>
     </p>
