--- a/_includes/about-me-short.html
+++ b/_includes/about-me-short.html
@@ -1,15 +1,8 @@
 <div class="about-me-short">
     <p>
-        I am a full stack developer specializing in SharePoint and Office&#8239;365.
+        Power Platform and Microsoft&#8239;365 Consultant&#8239;/&#8239;Developer.
+        {% include contact-details.html %}
         <br>
-        I work with SharePoint and Office&#8239;365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
+        I am building solutions with Power Platform: Power Apps, Power Automate, Power Pages, and Dataverse. I am helping clients unlock the potential of their Microsoft&#8239;365 with SharePoint Framework (SPFx), Teams apps, Microsoft Graph, and Power Platform. I am building APIs and integrating external services with Azure, TypeScript, JavaScript, Node.js, Next.js, and React.
     </p>
-    <p>
-        I can <a class="intanet-configuration-service-link"
-            href="{{site.baseUrl}}/services/intranet-configuration">configure your SharePoint intranet</a> and do <a
-            class="custom-development-service-link" href="{{site.baseUrl}}/services/development">custom Office&#8239;365
-            development</a>.
-        <br>
-    </p>
-    {% include contact-details.html %}
 </div>
