--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -1,18 +1,8 @@
 <div class="about-me">
     <p>
-        Hi! My name is Dmitry Rogozhny.
+        Hi! My name is Dzmitry Rahozhny.
     </p>
     <p>
-        I am a full stack developer specializing in SharePoint and Office&#8239;365.
-    </p>
-    <p>
-        I work with SharePoint and Office&#8239;365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
-    </p>
-    <p>
-        I have got experience in building intranets and extranets, content and document management solutions, portfolio
-        and project management systems, BI and reporting tools. For over 10 years, I've had a pleasure of delivering
-        projects for companies in oil&#8239;&&#8239;gas, banking,
-        and telecom industries. I am working as a developer, architect, and consultant.
-    </p>
+        I am building solutions with Power Platform: Power Apps, Power Automate, Power Pages, and Dataverse. I am helping clients unlock the potential of their Microsoft&#8239;365 with SharePoint Framework (SPFx), Teams apps, Microsoft Graph, and Power Platform. I am building APIs and integrating external services with Azure, TypeScript, JavaScript, Node.js, Next.js, and React.    </p>
     {% include contact-details.html %}
 </div>
